Refactor variable names and comments in extract_column.py

--- a/examples/analytics/data_analytics_example.ipynb
+++ b/examples/analytics/data_analytics_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bae5ec61",
+   "id": "36ed049c",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "00503153",
+   "id": "d965ed5a",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e9ab9df9",
+   "id": "23a47f3e",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d52c859a",
+   "id": "c248af4f",
    "metadata": {},
    "outputs": [
     {
@@ -496,8 +496,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "id": "7f9ee18d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_534989/352856462.py:16: MapWithoutReturnDtypeWarning: Calling `map_elements` without specifying `return_dtype` can lead to unpredictable results. Specify `return_dtype` to silence this warning.\n",
+      "  lazy_df = all_step_data.select(pl.col(\"natural_language_embedding\").map_elements(lambda x: deserialize_array(x))).collect()\n"
+     ]
+    }
+   ],
+   "source": [
+    "import polars as pl\n",
+    "import io\n",
+    "import numpy as np \n",
+    "\n",
+    "def deserialize_array(serialized_array):\n",
+    "    value = np.load(io.BytesIO(serialized_array)) #.astype(feature_spec.np_dtype)\n",
+    "    result = np.mean(value)\n",
+    "\n",
+    "all_step_data.select(pl.col(\"natural_language_embedding\").map_elements(lambda x: deserialize_array(x))).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "278d6255",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ColumnNotFoundError",
+     "evalue": "mean\n\nError originated just after this operation:\n SELECT [col(\"natural_language_embedding\").map_list()] FROM\n\n    PYTHON SCAN \n    PROJECT */16 COLUMNS",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mColumnNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[65], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mlazy_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mselect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmean\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdescribe\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/polars/lazyframe/frame.py:1035\u001b[0m, in \u001b[0;36mLazyFrame.describe\u001b[0;34m(self, percentiles, interpolation)\u001b[0m\n\u001b[1;32m    940\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdescribe\u001b[39m(\n\u001b[1;32m    941\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m    942\u001b[0m     percentiles: Sequence[\u001b[38;5;28mfloat\u001b[39m] \u001b[38;5;241m|\u001b[39m \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m0.25\u001b[39m, \u001b[38;5;241m0.50\u001b[39m, \u001b[38;5;241m0.75\u001b[39m),\n\u001b[1;32m    943\u001b[0m     \u001b[38;5;241m*\u001b[39m,\n\u001b[1;32m    944\u001b[0m     interpolation: RollingInterpolationMethod \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnearest\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m    945\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m DataFrame:\n\u001b[1;32m    946\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    947\u001b[0m \u001b[38;5;124;03m    Creates a summary of statistics for a LazyFrame, returning a DataFrame.\u001b[39;00m\n\u001b[1;32m    948\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1033\u001b[0m \u001b[38;5;124;03m    └────────────┴──────────┴──────────┴──────────┴──────┴────────────┴──────────┘\u001b[39;00m\n\u001b[1;32m   1034\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1035\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m:\n\u001b[1;32m   1036\u001b[0m         msg \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcannot describe a LazyFrame that has no columns\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1037\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(msg)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/polars/lazyframe/frame.py:663\u001b[0m, in \u001b[0;36mLazyFrame.columns\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    646\u001b[0m \u001b[38;5;129m@property\u001b[39m\n\u001b[1;32m    647\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcolumns\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m]:\n\u001b[1;32m    648\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    649\u001b[0m \u001b[38;5;124;03m    Get column names.\u001b[39;00m\n\u001b[1;32m    650\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    661\u001b[0m \u001b[38;5;124;03m    ['foo', 'bar']\u001b[39;00m\n\u001b[1;32m    662\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 663\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_ldf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mColumnNotFoundError\u001b[0m: mean\n\nError originated just after this operation:\n SELECT [col(\"natural_language_embedding\").map_list()] FROM\n\n    PYTHON SCAN \n    PROJECT */16 COLUMNS"
+     ]
+    }
+   ],
+   "source": [
+    "lazy_df.select(\"mean\").describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "cd3a27d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_534989/634255228.py:1: MapWithoutReturnDtypeWarning: Calling `map_elements` without specifying `return_dtype` can lead to unpredictable results. Specify `return_dtype` to silence this warning.\n",
+      "  lazy_df.select(\"mean\").collect().head()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>mean</th></tr><tr><td>binary</td></tr></thead><tbody><tr><td>b&quot;\\x93NUMPY\\x01\\x00v\\x00{&#x27;descr&#x27;:\\x20&#x27;&lt;f4&#x27;,\\x20&#x27;fortran_order&#x27;:\\x20False,\\x20&#x27;shape&#x27;:\\x20(),\\x20&quot;...</td></tr><tr><td>b&quot;\\x93NUMPY\\x01\\x00v\\x00{&#x27;descr&#x27;:\\x20&#x27;&lt;f4&#x27;,\\x20&#x27;fortran_order&#x27;:\\x20False,\\x20&#x27;shape&#x27;:\\x20(),\\x20&quot;...</td></tr><tr><td>b&quot;\\x93NUMPY\\x01\\x00v\\x00{&#x27;descr&#x27;:\\x20&#x27;&lt;f4&#x27;,\\x20&#x27;fortran_order&#x27;:\\x20False,\\x20&#x27;shape&#x27;:\\x20(),\\x20&quot;...</td></tr><tr><td>b&quot;\\x93NUMPY\\x01\\x00v\\x00{&#x27;descr&#x27;:\\x20&#x27;&lt;f4&#x27;,\\x20&#x27;fortran_order&#x27;:\\x20False,\\x20&#x27;shape&#x27;:\\x20(),\\x20&quot;...</td></tr><tr><td>b&quot;\\x93NUMPY\\x01\\x00v\\x00{&#x27;descr&#x27;:\\x20&#x27;&lt;f4&#x27;,\\x20&#x27;fortran_order&#x27;:\\x20False,\\x20&#x27;shape&#x27;:\\x20(),\\x20&quot;...</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 1)\n",
+       "┌───────────────────────────────────┐\n",
+       "│ mean                              │\n",
+       "│ ---                               │\n",
+       "│ binary                            │\n",
+       "╞═══════════════════════════════════╡\n",
+       "│ b\"\\x93NUMPY\\x01\\x00v\\x00{'descr'… │\n",
+       "│ b\"\\x93NUMPY\\x01\\x00v\\x00{'descr'… │\n",
+       "│ b\"\\x93NUMPY\\x01\\x00v\\x00{'descr'… │\n",
+       "│ b\"\\x93NUMPY\\x01\\x00v\\x00{'descr'… │\n",
+       "│ b\"\\x93NUMPY\\x01\\x00v\\x00{'descr'… │\n",
+       "└───────────────────────────────────┘"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lazy_df.select(\"mean\").collect().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "2ba7225e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import polars as pl\n",
+    "from PIL import Image\n",
+    "import io\n",
+    "import numpy as np \n",
+    "\n",
+    "def deserialize_array(serialized_array):\n",
+    "    value = np.load(io.BytesIO(serialized_array)) #.astype(feature_spec.np_dtype)\n",
+    "    \n",
+    "    result = np.mean(value)\n",
+    "    \n",
+    "    memfile = io.BytesIO()\n",
+    "    np.save(memfile, result)\n",
+    "    return memfile.getvalue()\n",
+    "\n",
+    "\n",
+    "lazy_df = all_step_data.with_columns([\n",
+    "    pl.col(\"natural_language_embedding\").map_elements(lambda x: deserialize_array(x)).alias(\"mean\"),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dc3db2c2",
+   "id": "3c54437b",
    "metadata": {},
    "outputs": [],
    "source": []
