rename the repo from fogrtx to fog_x

--- a/examples/analytics/data_analytics_example.ipynb
+++ b/examples/analytics/data_analytics_example.ipynb
@@ -307,9 +307,9 @@
     }
    ],
    "source": [
-    "import fog_rtx\n",
+    "import fog_x\n",
     "\n",
-    "dataset = fog_rtx.dataset.Dataset(\n",
+    "dataset = fog_x.dataset.Dataset(\n",
     "    name=\"demo_ds\",\n",
     "    path=\"~/test_dataset\",\n",
     ")\n",
