--- a/examples/Fog_X Demo.ipynb
+++ b/examples/Fog_X Demo.ipynb
@@ -10,8 +10,10 @@
     "In this demo, we show how to use Fog-X to collect and manage your robotics learning dataset. We show the following aspects of the Fog-X: \n",
     "* Support for existing Open-X datasets\n",
     "* Data Analytics and Management \n",
-    "* Use for Pytorch Learning, Export and Share with Open-X(rlds) and HuggingFace\n",
-    "We also compare the disk saving of Fog-X at the end "
+    "* Use for Pytorch Learning\n",
+    "* Export and Share with Open-X (Tensorflow rlds) and HuggingFace\n",
+    "\n",
+    "We also compare the disk saving (43\\%!) of Fog-X at the end."
    ]
   },
   {
@@ -47,32 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f52d6801",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-10 05:55:23.407831: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-04-10 05:55:25.093129: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
-      "2024-04-10 05:55:26.119965: W external/local_tsl/tsl/platform/cloud/google_auth_provider.cc:184] All attempts to get a Google authentication bearer token failed, returning an empty token. Retrieving token from files failed with \"NOT_FOUND: Could not locate the credentials file.\". Retrieving token from GCE failed with \"FAILED_PRECONDITION: Error executing an HTTP request: libcurl code 6 meaning 'Couldn't resolve host name', error details: Could not resolve host: metadata.google.internal\".\n",
-      "2024-04-10 05:55:42.883933: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:55:58.639679: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:56:15.328568: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:56:36.827206: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:57:07.586553: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:57:28.671534: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:57:51.859226: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:58:15.528222: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:58:32.790615: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:58:51.843846: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n",
-      "2024-04-10 05:58:53.939596: W tensorflow/core/framework/local_rendezvous.cc:404] Local rendezvous is aborting with status: OUT_OF_RANGE: End of sequence\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset.load_rtx_episodes(\n",
     "    name=\"berkeley_autolab_ur5\",\n",
