updating the readme and reflect the repo ownership change

--- a/examples/Fog_X_Cloud_Demo.ipynb
+++ b/examples/Fog_X_Cloud_Demo.ipynb
@@ -35,7 +35,7 @@
       },
       "outputs": [],
       "source": [
-        "! git clone https://github.com/KeplerC/fog_x.git\n",
+        "! git clone https://github.com/BerkeleyAutomation/fog_x.git\n",
         "! cd fog_x && git checkout cloud-demo-dev && pip install ."
       ]
     },
