--- a/benchmarking/misc/tf_record.ipynb
+++ b/benchmarking/misc/tf_record.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import tensorflow_datasets as tfds\n",
-    "from PIL import Image\n",
-    "from IPython import display"
+    "# Measuring read and write speed of TFrecord"
    ]
   },
   {
@@ -18,7 +15,108 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Retrieving image benchmark speed"
+    "import tensorflow as tf\n",
+    "import time\n",
+    "import os\n",
+    "\n",
+    "read_files = [\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00000-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00001-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00002-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00003-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00004-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00005-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00006-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00007-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00008-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00009-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00010-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00011-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00012-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00013-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00014-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00015-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00016-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00017-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00018-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00019-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00020-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00021-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00022-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00023-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00024-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00025-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00026-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00027-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00028-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00029-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00030-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00031-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00032-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00033-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00034-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00035-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00036-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00037-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00038-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00039-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00040-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00041-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00042-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00043-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00044-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00045-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00046-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00047-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00048-of-00050',\n",
+    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00049-of-00050'\n",
+    "]\n",
+    "\n",
+    "write_file = '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test_write_test.tfrecord'\n",
+    "\n",
+    "def measure_read_speed(files):\n",
+    "    start_time = time.time()\n",
+    "    total_bytes = 0\n",
+    "\n",
+    "    for file_path in files:\n",
+    "        for record in tf.data.TFRecordDataset(file_path):\n",
+    "            # Measure the speed of converting the record to numpy + for loop time\n",
+    "            record.numpy()\n",
+    "            total_bytes += len(record.numpy())\n",
+    "\n",
+    "    end_time = time.time()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    read_speed = total_bytes / elapsed_time / (1024 * 1024)\n",
+    "\n",
+    "    print(f\"Read {total_bytes} bytes in {elapsed_time:.2f} seconds\")\n",
+    "    print(f\"Read Speed: {read_speed:.2f} MB/s\")\n",
+    "    print(f\"Read Latency: {elapsed_time:.2f} seconds\")\n",
+    "\n",
+    "\n",
+    "def measure_write_speed(files, output_file):\n",
+    "    start_time = time.time()\n",
+    "    total_bytes = 0\n",
+    "\n",
+    "    with tf.io.TFRecordWriter(output_file) as writer:\n",
+    "        for file_path in files:\n",
+    "            for record in tf.data.TFRecordDataset(file_path):\n",
+    "                writer.write(record.numpy())\n",
+    "                total_bytes += len(record.numpy())\n",
+    "\n",
+    "    end_time = time.time()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "    write_speed = total_bytes / elapsed_time / (1024 * 1024) \n",
+    "\n",
+    "    print(f\"Wrote {total_bytes} bytes in {elapsed_time:.2f} seconds\")\n",
+    "    print(f\"Write Speed: {write_speed:.2f} MB/s\")\n",
+    "    print(f\"Write Latency: {elapsed_time:.2f} seconds\")\n",
+    "\n",
+    "\n",
+    "print(\"Measuring Read Speed...\")\n",
+    "measure_read_speed(read_files)\n",
+    "print(\"Measuring Write Speed...\")\n",
+    "measure_write_speed(read_files, write_file)\n",
+    "os.remove(write_file)\n"
    ]
   },
   {
@@ -33,6 +131,8 @@
     "from IPython.display import display as ip_display\n",
     "import time\n",
     "import os\n",
+    "\n",
+    "exit()\n",
     "\n",
     "read_files = [\n",
     "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00000-of-00050',\n",
@@ -188,181 +288,6 @@
     "measure_write_speed(read_files, write_file)\n",
     "\n",
     "os.remove(write_file)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Measuring read and write speed of TFrecord"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "import time\n",
-    "import os\n",
-    "\n",
-    "read_files = [\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00000-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00001-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00002-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00003-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00004-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00005-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00006-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00007-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00008-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00009-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00010-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00011-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00012-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00013-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00014-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00015-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00016-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00017-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00018-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00019-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00020-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00021-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00022-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00023-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00024-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00025-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00026-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00027-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00028-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00029-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00030-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00031-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00032-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00033-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00034-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00035-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00036-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00037-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00038-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00039-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00040-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00041-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00042-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00043-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00044-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00045-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00046-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00047-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00048-of-00050',\n",
-    "    '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test.tfrecord-00049-of-00050'\n",
-    "]\n",
-    "\n",
-    "\n",
-    "write_file = '/home/davidh/datasets/berkeley_autolab_ur5/berkeley_autolab_ur5-test_write_test.tfrecord'\n",
-    "\n",
-    "def measure_read_speed(files):\n",
-    "    start_time = time.time()\n",
-    "    total_bytes = 0\n",
-    "\n",
-    "    for file_path in files:\n",
-    "        for record in tf.data.TFRecordDataset(file_path):\n",
-    "            # Measure the speed of converting the record to numpy + for loop time\n",
-    "            record.numpy()\n",
-    "            total_bytes += len(record.numpy())\n",
-    "\n",
-    "    end_time = time.time()\n",
-    "    elapsed_time = end_time - start_time\n",
-    "    read_speed = total_bytes / elapsed_time / (1024 * 1024)\n",
-    "\n",
-    "    print(f\"Read {total_bytes} bytes in {elapsed_time:.2f} seconds\")\n",
-    "    print(f\"Read Speed: {read_speed:.2f} MB/s\")\n",
-    "    print(f\"Read Latency: {elapsed_time:.2f} seconds\")\n",
-    "\n",
-    "def measure_write_speed(files, output_file):\n",
-    "    start_time = time.time()\n",
-    "    total_bytes = 0\n",
-    "\n",
-    "    with tf.io.TFRecordWriter(output_file) as writer:\n",
-    "        for file_path in files:\n",
-    "            for record in tf.data.TFRecordDataset(file_path):\n",
-    "                writer.write(record.numpy())\n",
-    "                total_bytes += len(record.numpy())\n",
-    "\n",
-    "    end_time = time.time()\n",
-    "    elapsed_time = end_time - start_time\n",
-    "    write_speed = total_bytes / elapsed_time / (1024 * 1024) \n",
-    "\n",
-    "    print(f\"Wrote {total_bytes} bytes in {elapsed_time:.2f} seconds\")\n",
-    "    print(f\"Write Speed: {write_speed:.2f} MB/s\")\n",
-    "    print(f\"Write Latency: {elapsed_time:.2f} seconds\")\n",
-    "\n",
-    "print(\"Measuring Read Speed...\")\n",
-    "measure_read_speed(read_files)\n",
-    "print(\"Measuring Write Speed...\")\n",
-    "measure_write_speed(read_files, write_file)\n",
-    "\n",
-    "os.remove(write_file)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#plotting + code \n",
-    "# temporary plots: \n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Josh's data for Polars\n",
-    "polars_read_latency = 43.7798\n",
-    "polars_read_speed = 334.6640\n",
-    "polars_read_throughput = 1.1649\n",
-    "\n",
-    "polars_write_latency = 257.1229\n",
-    "polars_write_speed = 56.9826\n",
-    "polars_write_throughput = 0.1983\n",
-    "\n",
-    "# above data for TensorFlow Record\n",
-    "tf_read_latency = 16.76\n",
-    "tf_read_speed = 484.53\n",
-    "tf_read_throughput = 6.21\n",
-    "\n",
-    "tf_write_latency = 44.17\n",
-    "tf_write_speed = 183.84\n",
-    "tf_write_throughput = 2.35\n",
-    "\n",
-    "labels = ['Polars Read', 'Polars Write', 'TF Record Read', 'TF Record Write']\n",
-    "\n",
-    "latencies = [polars_read_latency, polars_write_latency, tf_read_latency, tf_write_latency]\n",
-    "speeds = [polars_read_speed, polars_write_speed, tf_read_speed, tf_write_speed]\n",
-    "throughputs = [polars_read_throughput, polars_write_throughput, tf_read_throughput, tf_write_throughput]\n",
-    "\n",
-    "#  latency plots\n",
-    "plt.figure(figsize=(14, 8))\n",
-    "plt.subplot(3, 1, 1)\n",
-    "plt.bar(labels, latencies, color=['blue', 'green', 'orange', 'red'])\n",
-    "plt.ylabel('Latency (s)')\n",
-    "plt.title('Latency, Speed, and Throughput of Polars and TF Record Operations')\n",
-    "\n",
-    "# speed plots\n",
-    "plt.subplot(3, 1, 2)\n",
-    "plt.bar(labels, speeds, color=['blue', 'green', 'orange', 'red'])\n",
-    "plt.ylabel('Speed (MB/s)')\n",
-    "\n",
-    "#  throughput plotting\n",
-    "plt.subplot(3, 1, 3)\n",
-    "plt.bar(labels, throughputs, color=['blue', 'green', 'orange', 'red'])\n",
-    "plt.ylabel('Throughput (trajectories/second)')\n",
-    "plt.xlabel('Operation')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n"
    ]
   }
  ],
