feat: Update dataset loading logs to reflect current time

--- a/examples/dataloader/Untitled.ipynb
+++ b/examples/dataloader/Untitled.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "caf5db32",
    "metadata": {},
    "outputs": [
@@ -292,9 +292,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I 2024-06-22 13:57:09,758 dataset_info.py:617] Load dataset info from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n",
-      "I 2024-06-22 13:57:09,797 reader.py:261] Creating a tf.data.Dataset reading 26 files located in folders: /home/kych/datasets/berkeley_autolab_ur5/0.1.0.\n",
-      "I 2024-06-22 13:57:09,915 logging_logger.py:49] Constructing tf.data.Dataset berkeley_autolab_ur5 for split train[:50], from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n"
+      "I 2024-06-22 14:22:24,762 dataset_info.py:617] Load dataset info from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n",
+      "I 2024-06-22 14:22:24,798 reader.py:261] Creating a tf.data.Dataset reading 26 files located in folders: /home/kych/datasets/berkeley_autolab_ur5/0.1.0.\n",
+      "I 2024-06-22 14:22:24,892 logging_logger.py:49] Constructing tf.data.Dataset berkeley_autolab_ur5 for split train[:50], from /home/kych/datasets/berkeley_autolab_ur5/0.1.0\n"
      ]
     }
    ],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "80867561",
    "metadata": {},
    "outputs": [],
@@ -314,12 +314,12 @@
     "\n",
     "exporter = MKVExporter()\n",
     "output_path = os.path.expanduser(\"~\") + \"/fog_x/examples/dataloader/mkv_output/\"\n",
-    "%timeit exporter.export(rtx_loader, output_path)"
+    "exporter.export(rtx_loader, output_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "fcfc1bdb",
    "metadata": {},
    "outputs": [
