refactor code structure

--- a/examples/dataloader/Untitled.ipynb
+++ b/examples/dataloader/Untitled.ipynb
@@ -30,7 +30,27 @@
     "\n",
     "    def __iter___(self):\n",
     "        raise NotImplementedError\n",
-    "    \n",
+    "\n",
+    "class BaseExporter():\n",
+    "    def __init__(self):\n",
+    "        super(BaseExporter, self).__init__()\n",
+    "        self.logger = getLogger(__name__)\n",
+    "\n",
+    "    def export(self, loader: BaseLoader, output_path: str):\n",
+    "        raise NotImplementedError\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fe6f0124-e66c-4529-8354-12fbc0769de5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "        \n",
     "class RTXLoader(BaseLoader):\n",
     "    def __init__(self, data_path, split = 'train[:50]'):\n",
     "        super(RTXLoader, self).__init__(data_path)\n",
@@ -51,25 +71,14 @@
     "        return idx\n",
     "    \n",
     "    def __iter__(self):\n",
-    "        return self.ds.__iter__()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "fe6f0124-e66c-4529-8354-12fbc0769de5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        return self.ds.__iter__()\n",
     "\n",
-    "class BaseExporter():\n",
+    "class RTXExporter(BaseExporter):\n",
     "    def __init__(self):\n",
-    "        super(BaseExporter, self).__init__()\n",
-    "        self.logger = getLogger(__name__)\n",
+    "        super(RTXExporter, self).__init__()\n",
     "\n",
     "    def export(self, loader: BaseLoader, output_path: str):\n",
-    "        raise NotImplementedError\n",
-    "        \n"
+    "        pass\n"
    ]
   },
   {
@@ -81,6 +90,77 @@
    "source": [
     "import av\n",
     "import pickle \n",
+    "class MKVLoader(BaseLoader):\n",
+    "    def __init__(self, data_path):\n",
+    "        super(MKVLoader, self).__init__(data_path)\n",
+    "        self.files = [data_path + f for f in os.listdir(data_path) if f.endswith('.mkv')]\n",
+    "        self.index = 0\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.ds)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return idx\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        if self.index < len(self.files):\n",
+    "            result = self.files[self.index]\n",
+    "            self.index += 1\n",
+    "            return self._parse_mkv_file(result)\n",
+    "        else:\n",
+    "            raise StopIteration\n",
+    "    \n",
+    "    def _parse_mkv_file(self, filename):\n",
+    "        print(filename)\n",
+    "        input_container = av.open(filename)\n",
+    "        video_stream1 = input_container.streams.video[0] \n",
+    "        video_stream1.thread_type = 'AUTO'\n",
+    "        video_stream2 = input_container.streams.video[1] \n",
+    "        video_stream2.thread_type = 'AUTO'\n",
+    "        depth_stream = input_container.streams.video[2] \n",
+    "        depth_stream.thread_type = 'AUTO'\n",
+    "        data_stream = input_container.streams[3] \n",
+    "\n",
+    "        decoded_stream_1 = []\n",
+    "        decoded_stream_2 = []\n",
+    "        decoded_stream_depth = []\n",
+    "        decoded_stream_data = []\n",
+    "\n",
+    "        pkt_counter = 0\n",
+    "        for packet in input_container.demux(video_stream1, video_stream2, depth_stream, data_stream):\n",
+    "            pkt_counter += 1\n",
+    "            if packet.stream.index == video_stream1.index: \n",
+    "                frame = packet.decode()\n",
+    "                if frame:\n",
+    "                    for f in frame:\n",
+    "                        image = f.to_ndarray(format='rgb24')\n",
+    "                        decoded_stream_1.append(image)\n",
+    "            elif packet.stream.index == video_stream2.index:\n",
+    "                frame = packet.decode()\n",
+    "                if frame:\n",
+    "                    for f in frame:\n",
+    "                        image = f.to_ndarray(format='rgb24')\n",
+    "                        decoded_stream_2.append(image)\n",
+    "            elif packet.stream.index == depth_stream.index:\n",
+    "                frame = packet.decode()\n",
+    "                if frame:\n",
+    "                    for f in frame:\n",
+    "                        image = f.to_ndarray(format='gray')\n",
+    "                        decoded_stream_depth.append(image)\n",
+    "            elif packet.stream.index == data_stream.index:\n",
+    "                packet_in_bytes = bytes(packet)\n",
+    "                if packet_in_bytes:\n",
+    "                    non_dict = pickle.loads(packet_in_bytes)\n",
+    "                    decoded_stream_data.append(non_dict)\n",
+    "            else:\n",
+    "                print(\"Unknown stream\")\n",
+    "        print(pkt_counter, len(decoded_stream_1), len(decoded_stream_2), len(decoded_stream_depth), len(decoded_stream_data))\n",
+    "        input_container.close()\n",
+    "\n",
+    "        \n",
     "\n",
     "class MKVExporter(BaseExporter):\n",
     "    def __init__(self):\n",
@@ -185,86 +265,6 @@
     "                output.mux(packet)\n",
     "            output.close()\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "9b27ac6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MKVLoader(BaseLoader):\n",
-    "    def __init__(self, data_path):\n",
-    "        super(MKVLoader, self).__init__(data_path)\n",
-    "        self.files = [data_path + f for f in os.listdir(data_path) if f.endswith('.mkv')]\n",
-    "        self.index = 0\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.ds)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        return idx\n",
-    "    \n",
-    "    def __iter__(self):\n",
-    "        return self\n",
-    "\n",
-    "    def __next__(self):\n",
-    "        if self.index < len(self.files):\n",
-    "            result = self.files[self.index]\n",
-    "            self.index += 1\n",
-    "            return self._parse_mkv_file(result)\n",
-    "        else:\n",
-    "            raise StopIteration\n",
-    "    \n",
-    "    def _parse_mkv_file(self, filename):\n",
-    "        print(filename)\n",
-    "        input_container = av.open(filename)\n",
-    "        video_stream1 = input_container.streams.video[0] \n",
-    "        video_stream1.thread_type = 'AUTO'\n",
-    "        video_stream2 = input_container.streams.video[1] \n",
-    "        video_stream2.thread_type = 'AUTO'\n",
-    "        depth_stream = input_container.streams.video[2] \n",
-    "        depth_stream.thread_type = 'AUTO'\n",
-    "        data_stream = input_container.streams[3] \n",
-    "\n",
-    "        decoded_stream_1 = []\n",
-    "        decoded_stream_2 = []\n",
-    "        decoded_stream_depth = []\n",
-    "        decoded_stream_data = []\n",
-    "\n",
-    "        pkt_counter = 0\n",
-    "        for packet in input_container.demux(video_stream1, video_stream2, depth_stream, data_stream):\n",
-    "            pkt_counter += 1\n",
-    "            if packet.stream.index == video_stream1.index: \n",
-    "                frame = packet.decode()\n",
-    "                if frame:\n",
-    "                    for f in frame:\n",
-    "                        image = f.to_ndarray(format='rgb24')\n",
-    "                        decoded_stream_1.append(image)\n",
-    "            elif packet.stream.index == video_stream2.index:\n",
-    "                frame = packet.decode()\n",
-    "                if frame:\n",
-    "                    for f in frame:\n",
-    "                        image = f.to_ndarray(format='rgb24')\n",
-    "                        decoded_stream_2.append(image)\n",
-    "            elif packet.stream.index == depth_stream.index:\n",
-    "                frame = packet.decode()\n",
-    "                if frame:\n",
-    "                    for f in frame:\n",
-    "                        image = f.to_ndarray(format='gray')\n",
-    "                        decoded_stream_depth.append(image)\n",
-    "            elif packet.stream.index == data_stream.index:\n",
-    "                packet_in_bytes = bytes(packet)\n",
-    "                if packet_in_bytes:\n",
-    "                    non_dict = pickle.loads(packet_in_bytes)\n",
-    "                    decoded_stream_data.append(non_dict)\n",
-    "            else:\n",
-    "                print(\"Unknown stream\")\n",
-    "        print(pkt_counter, len(decoded_stream_1), len(decoded_stream_2), len(decoded_stream_depth), len(decoded_stream_data))\n",
-    "        input_container.close()\n",
-    "\n",
-    "        \n"
    ]
   },
   {
